--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon src/app.js"
   },
   "keywords": [],
   "author": "",
@@ -12,10 +12,12 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "handlebars": "^4.7.8",
     "hbs": "^4.2.0",
     "mongodb": "^6.0.0",
-    "mongoose": "^7.5.0",
+    "mongoose": "^7.6.3",
     "mongoose-paginate-v2": "^1.7.31",
+    "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.2"
   }
 }
